# Lanzou

./: .gitignore  Constant.py  README.md  Variable.py  assets_rc.py  debug_page_原本阴沉的我要向青春复仇 01.epub.html  debug_page_原本阴沉的我要向青春复仇 02.epub.html  debug_page_原本阴沉的我要向青春复仇 03.epub.html  debug_page_原本阴沉的我要向青春复仇 04.epub.html  debug_page_原本阴沉的我要向青春复仇 05.epub.html  debug_password_page.html  debug_password_response.txt  debug_response_原本阴沉的我要向青春复仇 03.epub.txt  index.html  main.py  mainWindow.py  mainWindow.ui  package-lock.json  package.json  requirements-dev.txt  requirements.txt  vite.config.js
.github/: release.yml
.github/workflows/: tauri-build.yml  tauri-release.yml
lanzou_downloader/: __init__.py  client.py  config.py  exceptions.py  models.py  qt_worker.py  service.py
src/: App.jsx  main.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  downloader.rs  errors.rs  main.rs  models.rs  storage.rs
src/components/: AppHeader.jsx  CompleteDialog.jsx  DownloadForm.jsx  HistoryDialog.jsx  LogPanel.jsx  ProgressPanel.jsx  SettingsDialog.jsx  ui.jsx
src/lib/: downloadState.js
